KUBERNETES/Backend/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: familyclub-backend
  namespace: production
  labels:
    app.kubernetes.io/name: familyclub-backend
    app.kubernetes.io/part-of: familyclub
    app.kubernetes.io/component: backend
    app.kubernetes.io/environment: production
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: familyclub-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: familyclub-backend
        app.kubernetes.io/version: "1.0"
      annotations:
        image-digest: "sha256:1ba0bc85b2eb2d3828772ea1460abe60c0508e42fe9d25d948dee35ac42a721f"
        build-date: "2026-07-17T19:50:07+00:00"
        commit-hash: "5ea0a6602ac433c3c9cd5f2d8a3598137a932297"
        branch: "DeploymentTest5"
        repository: "https://github.com/Metra638/FamilyClub.WebAPI1"
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      terminationGracePeriodSeconds: 60
      containers:
      - name: backend
        image: metra638/test1@sha256:1ba0bc85b2eb2d3828772ea1460abe60c0508e42fe9d25d948dee35ac42a721f
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        # Ресурсы (requests/limits) не указаны намеренно:
        # - Кластер имеет жёсткие ограничения по CPU/памяти, это приводит к "Pending".
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 15"]
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: production
  labels:
    app.kubernetes.io/name: familyclub-backend
spec:
  selector:
    app.kubernetes.io/name: familyclub-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
# apiVersion: policy/v1
# kind: PodDisruptionBudget
# metadata:
#   name: backend-pdb
#   namespace: production
#   labels:
#     app.kubernetes.io/name: familyclub-backend
# spec:
#   minAvailable: 1
#   selector:
#     matchLabels:
#       app.kubernetes.io/name: familyclub-backend
