KUBERNETES/Backend/backend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: production
  labels:
    app.kubernetes.io/name: familyclub-backend
    app.kubernetes.io/part-of: familyclub
    app.kubernetes.io/component: backend
    app.kubernetes.io/environment: production
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: familyclub-backend
  policyTypes: [Ingress]
  ingress:
  - from: # Внешний трафик через Ingress
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8080
  # - protocol: UDP
  #   port: 8080
  - from: # Внутренние вызовы (SSR)
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: familyclub-frontend
      namespaceSelector:
        matchLabels:
          app.kubernetes.io/environment: production
    ports:
    - protocol: TCP
      port: 8080
  # - protocol: UDP
  #   port: 8080
